src/objects/TriggerSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This hierachical setting activates/deactivates all triggers of the org.</description>
    <fields>
        <fullName>Campaign_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox Activates/Deactivates Campaign Trigger</inlineHelpText>
        <label>Campaign Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox activates/deactivates the case trigger.</inlineHelpText>
        <label>Case Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_All_Actions_Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox activates/deactivates Check All Actions Account Trigger.</inlineHelpText>
        <label>Check All Actions Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox activates/deactivates contact trigger.</inlineHelpText>
        <label>Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Context_Variable_Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox activates/deactivates context variable trigger on account</inlineHelpText>
        <label>Context Variable Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Clone_Lead_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox activates/deactivates create clone trigger on lead.</inlineHelpText>
        <label>Create Clone Lead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Task_Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox activates/deactivates create task trigger on account.</inlineHelpText>
        <label>Create Task Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Activation Setting</label>
</CustomObject>